# mesa

./: README.md  convergence_plot.py  cross_validation.py  evalulate_training_data.py  initial_sampling.py  input_parsing.py  matrix_plots.py  optimiser.py  pyproject.toml  random_search.py  run_gpyopt.py  settings.py  settings_v2.py  setup.cfg  solps_interface.py
mesa/: __init__.py  diagnostics.py  driver.py  drivers.py  mesa.py  models.py  optimisation.py  parameters.py  parsing.py  plotting.py  simulations.py  solps.py
mesa/driver/: driver.py  optimize.py  scan.py
mesa/drivers/: __init__.py  base.py  genetic.py  gpo.py
mesa/simulations/: __init__.py  himmelblau.py  simulation.py  solps.py  vsim.py
mesa/simulations/solps/: __init__.py  models.py  parameters.py  transport.py
mesa/strategies/: __init__.py  base.py  genetic.py  gpo.py
plotting/: convergence_plot.py  cross_validation.py  matrix_plots.py
tests/: test_models.py  test_vsim.py
