[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mesa", "mesa.simulations", "mesa.simulations.solps", "mesa.strategies"]


[project]
name = "mesa"
authors = [
    {name = "Chris Bowman", email = "chris.bowman.physics@gmail.com"},
    {name = "Jarrod Leddy", email = "jarrodleddy@microsoft.com"},
]
description = "Automatic optimization of simulation results"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.20",
    "scipy >= 1.6.3",
    "matplotlib >= 3.4.2",
    "sim-solps >= 0.1.3",
    "inference-tools >= 0.13.4",
    "pandas >= 1.4.0",
    "tables >= 3.4.0",
]

[project.urls]
Homepage = "https://github.com/C-bowman/mesa"

[project.optional-dependencies]
tests = [
    "pytest >= 3.3.0",
]