[metadata]
name = mesa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/mesa
author = Chris Bowman
author_email = chris.bowman.physics@gmail.com
description = Automatic fitting of SOLPS predictions to experimental data using Gaussian-process optimisation
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/mesa
    Tracker = https://github.com/C-bowman/mesa/issues

[options]
packages = find:
install_requires =
    numpy >= 1.8
    scipy >= 1.6.3
    sim-solps >= 0.1.0
    matplotlib >= 3.4.2
    inference-tools >= 0.6.2