[metadata]
name = mesa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/C-bowman/mesa
author = 'Chris Bowman, Jarrod Leddy'
author_email = 'chris.bowman.physics@gmail.com, jleddy@txcorp.com'
description = Automatic optimization of simulations
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/C-bowman/mesa
    Tracker = https://github.com/C-bowman/mesa/issues

[options]
packages = find:
install_requires =
    numpy >= 1.8
    scipy >= 1.6.3
    sim-solps >= 0.1.2
    matplotlib >= 3.4.2
    inference-tools >= 0.8
    pandas >= 1.4.0